--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "theme-plastic-ab",
   "displayName": "PlasticAB",
   "description": "My fork of plasticCodeWrap",
-  "version": "1.8.4",
+  "version": "2.0.0",
   "publisher": "allenbar",
   "engines": {
     "vscode": "^1.12.0"
   },
-  "categories": ["Themes"],
+  "categories": [
+    "Themes"
+  ],
   "contributes": {
     "themes": [
       {
