--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "theme-plastic-ab",
   "displayName": "PlasticAB",
   "description": "My fork of plasticCodeWrap",
-  "version": "2.2.6",
+  "version": "2.3.0",
   "publisher": "allenbar",
   "engines": {
     "vscode": "^1.12.0"
@@ -16,6 +16,11 @@
         "label": "PlasticAB",
         "uiTheme": "vs-dark",
         "path": "./themes/PlasticAB.color-theme.json"
+      },
+      {
+        "label": "PlasticAB Dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/PlasticAB-Dark.color-theme.json"
       }
     ]
   },
